--- a/test-output/old/APIFrameWork/methods.html
+++ b/test-output/old/APIFrameWork/methods.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>APIFrameWork</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="98ae61">  <td>20/05/27 12:16:48</td>   <td>0</td> <td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:com.w2a.testcases.BankManagerLogin@5a1c0542]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1123629720</td>   <td></td> </tr>
-<tr bgcolor="ec7f6c">  <td>20/05/27 12:16:57</td>   <td>9235</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BankManagerLogin.loginBankManager()[pri:0, instance:com.w2a.testcases.BankManagerLogin@5a1c0542]">loginBankManager</td> 
-  <td>main@1123629720</td>   <td></td> </tr>
-<tr bgcolor="98ae61">  <td>20/05/27 12:17:03</td>   <td>15524</td> <td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.w2a.testcases.BankManagerLogin@5a1c0542]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1123629720</td>   <td></td> </tr>
+<tr bgcolor="bf7eae">  <td>20/05/30 14:59:47</td>   <td>0</td> <td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:com.w2a.testcases.AddCustomerTest@53f3bdbd]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@333392524</td>   <td></td> </tr>
+<tr bgcolor="9fcf7f">  <td>20/05/30 14:59:55</td>   <td>7406</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BankManagerLoginTest.loginBankManager()[pri:0, instance:com.w2a.testcases.BankManagerLoginTest@6cc4cdb9]">loginBankManager</td> 
+  <td>main@333392524</td>   <td></td> </tr>
+<tr bgcolor="6a6d86">  <td>20/05/30 14:59:55</td>   <td>7475</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddCustomerTest.addCustomerTest(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.w2a.testcases.AddCustomerTest@53f3bdbd]">addCustomerTest</td> 
+  <td>main@333392524</td>   <td></td> </tr>
+<tr bgcolor="bf7eae">  <td>20/05/30 15:00:05</td>   <td>17601</td> <td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.w2a.testcases.AddCustomerTest@53f3bdbd]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@333392524</td>   <td></td> </tr>
 </table>
