--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="98ae61">  <td>20/05/28 09:10:03</td>   <td>0</td> <td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:com.w2a.testcases.BankManagerLogin@262b2c86]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="ec7f6c">  <td>20/05/28 09:10:11</td>   <td>7880</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BankManagerLogin.loginBankManager()[pri:0, instance:com.w2a.testcases.BankManagerLogin@262b2c86]">loginBankManager</td> 
-  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="98ae61">  <td>20/05/28 09:10:17</td>   <td>14109</td> <td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.w2a.testcases.BankManagerLogin@262b2c86]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
+<tr bgcolor="98ae61">  <td>20/05/30 15:05:30</td>   <td>0</td> <td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:com.w2a.testcases.BankManagerLoginTest@35aea049]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@838473569</td>   <td></td> </tr>
+<tr bgcolor="ec7f6c">  <td>20/05/30 15:05:38</td>   <td>8008</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BankManagerLoginTest.loginBankManager(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.w2a.testcases.BankManagerLoginTest@35aea049]">loginBankManager</td> 
+  <td>main@838473569</td>   <td></td> </tr>
+<tr bgcolor="98ae61">  <td>20/05/30 15:05:51</td>   <td>21076</td> <td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.w2a.testcases.BankManagerLoginTest@35aea049]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@838473569</td>   <td></td> </tr>
 </table>
